# options_backtester

./: .gitignore  .travis.yml  2legs_example.ipynb  CONTRIBUTING.md  LICENSE  Makefile  Pipfile  README.md  REFERENCES.md  analyze_entries_exits.py  backtest_runner.py  backtester_demo.ipynb  data_cleanup.ipynb  data_scraper.conf  diag_parity.py  flake.nix  main.mojo  pyproject.toml  research.md  run_spy_otm_puts.py  setup.cfg  sweep_allocation.py  sweep_iv_signal.py  sweep_leverage.py  sweep_otm.py  sweep_volatility.py
.github/workflows/: ci.yml
alert/: Cargo.toml  Dockerfile  Makefile  README.md
alert/migrations/2019-04-01-152015_create_dollar/: down.sql  up.sql
alert/migrations/2019-04-05-150011_create_alert/: down.sql  up.sql
alert/src/: alert.rs  main.rs  models.rs  schema.rs  scrape.rs  storage.rs
asset_backtester/: __init__.py  backtester.py  charts.py  test.ipynb
asset_backtester/datahandler/: __init__.py  historical_asset_data.py  historical_stock_data.py  schema.py
asset_backtester/examples/: example.ipynb
asset_backtester/portfolio/: __init__.py  asset.py  portfolio.py
asset_backtester/statistics/: __init__.py  charts.py
asset_backtester/stats/: charts.py
asset_backtester/strategy/: __init__.py  asset.py  direction.py  strategy.py
asset_backtester/test/: conftest.py
backtester/: __init__.py  __main__.py  backtester.py  enums.py  event.py  option.py  utils.py
backtester/SPX_daily/: SPX_20190425.csv  SPX_20190426.csv  SPX_20190429.csv  (+55 more)
benchmarks/: benchmark_large_pipeline.py  benchmark_matrix.py  benchmark_rust_vs_python.py  benchmark_sweep.py  compare_with_bt.py
data/: README.md  convert_optionsdx.py  fetch_data.py  fetch_signals.py
data_scraper/: __main__.py  backup.py  cboe.py  cboe_selenium.py  cboesymboldir2.csv  logconfig.ini  notifications.py  tiingo.py  utils.py  validation.py
docker/: docker-compose.yml
docs/: comparison_with_bt.md  quickstart.md
notebooks/: README.md  barbell_worker.py  benchmark_vs_bt.ipynb  beyond_spitznagel.ipynb  bond_carry_usuk.ipynb  carry_portfolio.ipynb  commodity_carry.ipynb  comparison_with_bt.ipynb  equity_spitznagel.ipynb  export_fx_results.py  findings.ipynb  fx_carry_real.ipynb  fx_carry_synthetic.ipynb  gold_sp500.ipynb  iron_condor.ipynb  ivy_portfolio.ipynb  leverage_analysis.ipynb  multi_asset_carry.ipynb  nb_style.py  paper_comparison.ipynb  quickstart.ipynb  results.ipynb  spitznagel_case.ipynb  spitznagel_case_rerun.ipynb  strategies.ipynb  tail_hedge_debate.ipynb  taleb_barbell.ipynb  trade_analysis.ipynb  treasury_spitznagel.ipynb  volatility_premium.ipynb
options_backtester/: __init__.py
options_portfolio_backtester/: __init__.py
research/: research.md
rust/: Cargo.toml
rust/ob_core/: Cargo.toml
rust/ob_core/benches/: hot_paths.rs
rust/ob_core/src/: backtest.rs  balance.rs  convexity_backtest.rs  convexity_scoring.rs  cost_model.rs  entries.rs  exits.rs  fill_model.rs  filter.rs  inventory.rs  lib.rs  risk.rs  signal_selector.rs  stats.rs  types.rs
rust/ob_python/: Cargo.toml
rust/ob_python/src/: arrow_bridge.rs  lib.rs  py_backtest.rs  py_balance.rs  py_convexity.rs  py_entries.rs  py_execution.rs  py_exits.rs  py_filter.rs  py_stats.rs  py_sweep.rs
scripts/: analyze_entries_exits.py  backtest_runner.py  benchmark_large_pipeline.py  benchmark_matrix.py  benchmark_rust_vs_python.py  benchmark_sweep.py  build_bond_carry_nb.py  build_equity_nb.py  build_treasury_nb.py  calm_period_experiment.py  compare_with_bt.py  parallel_sweep.py  run_spy_otm_puts.py  sweep_allocation.py  sweep_beat_spy.py  sweep_beat_spy2.py  sweep_beat_spy3.py  sweep_comprehensive.py  sweep_iv_signal.py  sweep_leverage.py  sweep_otm.py  sweep_volatility.py  walk_forward_report.py
tests/: conftest.py  test_cleanup.py  test_deep_analytics_convexity.py  test_intrinsic_sign.py  test_intrinsic_value.py  test_property_based.py  test_smoke.py
(+252 files in other folders)
