[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "options_portfolio_backtester"
version = "0.3.0"
description = "The open-source options backtesting framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "altair>=5.0",
    "pyprind>=2.11",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
rust = ["polars>=1.0,<1.6"]
charts = ["seaborn>=0.13", "matplotlib>=3.8"]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
    "pytest-benchmark",
    "mypy>=1.8",
    "ruff>=0.3",
    "pandas-stubs",
    "maturin>=1.7",
]
notebooks = ["jupyter", "nbconvert"]

[tool.maturin]
manifest-path = "rust/ob_python/Cargo.toml"
module-name = "options_portfolio_backtester._ob_rust"
python-source = "."
features = ["pyo3/extension-module"]

[tool.setuptools.packages.find]
include = ["options_portfolio_backtester*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m \"not bench\""
markers = [
    "bench: benchmark/property tests requiring explicit opt-in",
    "slow: full-range stress tests (17-year SPY, minutes to run)",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = false

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E126", "F403", "F405", "W504"]
